dbus: Register QDBusObjectPath

Fixes: QTBUG-108822
Change-Id: Ib6d1a9cfc449df80cb7e5ad6211b07bdfd556093
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit d619a952cdcdf0a0ca163e8513f0843f8bc9c2dc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>