src/dbus/qdbusmetatype.cpp
@@ -78,6 +78,7 @@ void QDBusMetaTypeId::init()
         qDBusRegisterMetaType<QVariantList>();
         qDBusRegisterMetaType<QVariantMap>();
         qDBusRegisterMetaType<QVariantHash>();
+        qDBusRegisterMetaType<QDBusObjectPath>();
 
         qDBusRegisterMetaType<QList<bool> >();
         qDBusRegisterMetaType<QList<short> >();
